[gd_scene load_steps=8 format=3 uid="uid://bhkp6xwyjejpn"]

[ext_resource type="Script" path="res://proxy/ProxyCore.gd" id="1_o4fqg"]
[ext_resource type="Texture2D" uid="uid://tx7cm8yhj0b1" path="res://sprites/SolidColors/Azure.png" id="1_rks1j"]
[ext_resource type="Texture2D" uid="uid://dc17nyr4np3iv" path="res://sprites/SolidColors/Red.png" id="2_wilps"]

[sub_resource type="SpriteFrames" id="SpriteFrames_77140"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}, {
"duration": 1.0,
"texture": ExtResource("2_wilps")
}, {
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}],
"loop": false,
"name": &"Invalid",
"speed": 32.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rks1j")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_calda"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2slh0"]
size = Vector2(14, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7xqt"]
size = Vector2(14, 14)

[node name="ProxyCore" type="CharacterBody2D"]
script = ExtResource("1_o4fqg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.57628e-07, 3.57628e-07)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_77140")
animation = &"Invalid"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_calda")

[node name="TopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_2slh0")

[node name="BottomArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomArea"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_2slh0")

[node name="LeftArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-8, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2slh0")

[node name="RightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(8, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2slh0")

[node name="LEFT" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LEFT"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_t7xqt")

[node name="UP" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UP"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_t7xqt")

[node name="RIGHT" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RIGHT"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_t7xqt")

[node name="DOWN" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DOWN"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_t7xqt")
